# GameEngineIllusion

./: .gitignore  .gitmodules  CMakeLists.txt  Conventions.md  README.md  clean.bat  msvc_build.bat  run.bat  start.bat
Docs/GDD/: GDD_v1_GameEngineIllusion.md
Documents/: Lien_Video.txt
GameProjects/FirstGameAttempt/: config.json
GameProjects/Immeuble/: config.json
GameProjects/Optimulus/: config.json
GameProjects/Optimulus2/: config.json
GameProjects/project1/: scene.json  scene1.scene  scene2.json  scene2.scene
Illusion/: Illusion.sln  assimp_import_flags_to_test.txt  clean.bat  clean_linux.sh  generate.bat  generate_linux.sh  imgui.ini  premake5.lua
Illusion/Debug/: Glad.lib
Illusion/IllusionEditor/: IllusionEditor.vcxproj  imgui.ini
Illusion/IllusionEditor/include/: Assimp_.h  Assimp_test.h  Importer.h  Renderer.h  Shader.h
Illusion/IllusionEditor/src/: IllusionEditor.cpp
Illusion/IllusionEngine/: IllusionEngine.vcxproj  IllusionEngine.vcxproj.filters
IllusionEngine/: CMakeLists.txt
IllusionEngine/include/: IllusionEngine.h  Window.h
IllusionEngine/src/: IllusionEngine.cpp  Logger.cpp  Window.cpp
illusionEngine/: geometryengine.h  illusionengine.cpp  mainwidget.cpp  windowEngine.qrc
illusionEngine/utilities/: mathtypes.h  utilities.h
illusionEngineQt/: fshader.glsl  gameengine.pro  geometryengine.cpp  illusionengine.h  main.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  models.qrc  textures.qrc  vshader.glsl
illusionEngineQt/common/: commonheaders.h  id.h  primitivetypes.h
librairies/Glad/: CMakeLists.txt
(+296 files in other folders)
